# rust_learn

./: readme.md
advanced-memory/: Cargo.toml
advanced-memory/src/: main.rs
async-await/src/: main.rs
billing-application/: Cargo.toml
billing-application/src/: bill.rs  db.rs  main.rs  manager.rs  util.rs
clip-stash/: Cargo.toml  data.db
clip-stash/src/lib/: mod.rs
clip-stash/src/lib/data/: mod.rs  model.rs  query.rs
clip-stash/src/lib/domain/: time.rs
clip-stash/src/lib/domain/clip/: mod.rs
clip-stash/src/lib/domain/clip/field/: clip_id.rs  content.rs  expires.rs  hits.rs  password.rs  shortcode.rs  title.rs
clip-stash/src/lib/service/: action.rs  ask.rs  mod.rs
clip-stash/src/lib/web/: ctx.rs  renderer.rs
control-flow/src/: main.rs
custom-error-handling/: Cargo.toml
custom-error-handling/src/: main.rs
easier-data-managment/: Cargo.toml
easier-data-managment/src/: main.rs
expanding-knowledge/: Cargo.toml
expanding-knowledge/src/: main.rs
external-modules/: Cargo.toml
external-modules-lib/: Cargo.toml
external-modules-lib/src/: codec.rs  lib.rs  transcode.rs
external-modules/src/: garden.rs  main.rs  plant.rs
fallible-functions/: Cargo.toml
generics/src/: main.rs
lifetimes/: mock-data.csv
managing-code/: Cargo.toml
match-guards-binding/: Cargo.toml
olang-features/: Cargo.toml
parallel-execution/: Cargo.toml
shared-ownership/: Cargo.toml
std-lib-tour/: Cargo.toml
thread-activity/: Cargo.toml
traits/: Cargo.toml
type-conversions/: Cargo.toml
type-pattern/: Cargo.toml
working-with-data/: Cargo.toml
(+37 files in other folders)
